Issue #7534:  Fix handling of nans, infinities, and negative zero in ** operator, on IEEE 754 platforms.  Thanks Marcos Donolo for original patch.